GpMessages/5627346632700
<?xml version="1.0" encoding="utf-8"?><messages><msg code="0" type="2">Start Time: Saturday, April 13, 2024 11:42:51 PM</msg><msg code="539" type="100">ERROR 000539:   File "&lt;expression&gt;", line 1
    If(u"Central Park West"=&lt;Null&gt;, false, true)
       ^
SyntaxError: expression cannot contain assignment, perhaps you meant "=="?
</msg><msg code="-2147467259" type="100">Failed to execute (CalculateField).</msg><msg code="0" type="3">Failed at Saturday, April 13, 2024 11:42:51 PM (Elapsed Time: 0.12 seconds)</msg></messages>